--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+
+# Editor
+.vscode/
+
+# Build directory
+dist/
+.nyc_output
+build
+coverage
+
 .clasp.json
