--- a/package.json
+++ b/package.json
@@ -1,37 +1,23 @@
 {
-  "name": "DaVinciRank",
+  "name": "davinci-rank",
   "version": "1.0.0",
   "description": "Science Olympiad Tournament Scoring System based on Google Sheets",
   "main": "main.ts",
   "scripts": {
-    "build": "tsc",
+    "clean": "gts clean",
     "lint": "npm run check",
-    "check": "gts check *.ts test/*.ts",
-    "test": "jest",
+    "check": "gts check *.ts tests/*.ts",
     "prettier": "prettier . test --write",
-    "coverage": "nyc --reporter=lcov --reporter=text npm test && nyc report --reporter=text-lcov | coveralls",
-    "clean": "gts clean"
-  },
-  "nyc": {
-    "include": [
-      "*.ts"
-    ],
-    "exclude": [
-      "test/**/*.ts",
-      "node_modules"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "reporter": [
-      "lcov",
-      "text"
-    ],
-    "all": true
+    "test": "jest",
+    "test:coverage": "jest --forceExit --coverage --verbose",
+    "test:watch": "jest --watchAll",
+    "bundle": "rollup --no-treeshake -c rollup.config.mjs",
+    "build": "npm run lint && npm run test && npm run clean && npm run bundle && cpx appsscript.json dist",
+    "push": "npm run build && clasp push"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Davepar/gcalendarsync.git"
+    "url": "git+https://github.com/rohanskariah/DaVinciRank.git"
   },
   "keywords": [
     "DaVinciRank",
@@ -47,24 +33,79 @@
     "url": "https://github.com/rohanskariah/DaVinciRank/issues"
   },
   "homepage": "https://github.com/rohanskariah/DaVinciRank",
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "@types/google-apps-script": "^1.0.46"
+    "@types/google-apps-script": "^1.0.92"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
-    "@types/google-apps-script": "1.0.37",
-    "@types/jasmine": "^3.8.2",
+    "@types/google-apps-script": "^1.0.92",
+    "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
-    "coveralls": "^3.1.1",
+    "clean": "^4.0.2",
+    "cpx": "^1.5.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^9.1.0",
     "gts": "^6.0.2",
     "jest": "^29.7.0",
     "nyc": "^17.1.0",
     "prettier": "^3.2.5",
+    "rollup": "^4.34.0",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-license": "^3.5.3",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.2.1",
     "typescript": "^5.7.3"
+  },
+  "nyc": {
+    "include": [
+      "*.ts"
+    ],
+    "exclude": [
+      "tests/**/*.ts",
+      "node_modules"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "all": true,
+    "sourceMap": true,
+    "instrument": true
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.json"
+        }
+      ]
+    },
+    "testMatch": [
+      "**/tests/**/*.test.(ts|js)"
+    ],
+    "reporters": [
+      "default"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.{ts,js}",
+      "!**/node_modules/**"
+    ]
   }
 }
